--- a/css/style.css
+++ b/css/style.css
@@ -133,3 +133,69 @@ body {
 .header__menu .menu__list .menu__item_link:hover {
   color: #BF9140;
 }
+
+.page__main-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+.page__main-block .page__main-text {
+  width: 35%;
+  margin-left: 8%;
+  margin-top: 5%;
+}
+.page__main-block .page__main-text_title {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 48px;
+  line-height: 59px;
+  color: #fff;
+  width: 473px;
+  height: 59px;
+}
+.page__main-block .page__main-text_desc {
+  width: 75%;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 150%;
+  color: #fff;
+}
+.page__main-block .page__main-text .page__main_btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 2% 0;
+  padding: 5px 160px;
+  top: 20px;
+  width: 441px;
+  height: 70px;
+  color: #fff;
+  background: linear-gradient(90.38deg, #245293 0%, #4485E4 100%);
+  border-radius: 5px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 29px;
+}
+.page__main-block .page__main-img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-left: 10%;
+}
