--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ h1, h2, h3, h4, h5, h6 {
 
 body {
   overflow-x: hidden;
-  z-index: -1;
+  z-index: -2;
   background-image: url("/img/bg.png");
   height: 4500px;
 }
@@ -159,6 +159,7 @@ body {
   height: 59px;
 }
 .page__main-block .page__main-text_desc {
+  margin-top: 5%;
   width: 75%;
   font-style: normal;
   font-weight: normal;
@@ -188,6 +189,9 @@ body {
   font-size: 24px;
   line-height: 29px;
 }
+.page__main-block .page__main-text .page__main_btn:hover {
+  background: linear-gradient(90.38deg, #D55707 0%, #F59902 100%);
+}
 .page__main-block .page__main-img {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -198,4 +202,35 @@ body {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   margin-left: 10%;
+}
+.page__main-block .page__main-more {
+  margin-top: 5%;
+  margin-left: 48.5%;
+}
+.page__main-block .page__main-more_text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+  color: #8B929A;
+}
+.page__main-block .page__main-more_icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-left: 31.5%;
+  margin-top: 5%;
 }
