--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,8 @@ body {
   line-height: 29px;
 }
 .page__main-block .page__main-text .page__main_btn:hover {
+  -webkit-box-shadow: 0px 0px 50px #D55707;
+          box-shadow: 0px 0px 50px #D55707;
   background: linear-gradient(90.38deg, #D55707 0%, #F59902 100%);
 }
 .page__main-block .page__main-img {
@@ -233,4 +235,58 @@ body {
       flex-wrap: wrap;
   margin-left: 31.5%;
   margin-top: 5%;
+}
+
+.page__rules .page__rules_title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-top: 5%;
+  margin-left: -0.8%;
+  width: 86%;
+  height: auto;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 288px;
+  line-height: 351px;
+  letter-spacing: 0.007em;
+  color: #09111B;
+  text-shadow: #8B929A 0 0 0;
+}
+.page__rules .rules__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-top: 5%;
+  margin-left: 9.15%;
+}
+.page__rules .rules__container .rules__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  color: #fff;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 22px;
+  letter-spacing: 0.007em;
+  width: 81.5%;
+}
+.page__rules .rules__container .rules__list_item {
+  margin-top: 2%;
+  list-style-image: url("/img/list-icon.svg");
+  list-style-position: outside;
 }
