--- a/css/style.css
+++ b/css/style.css
@@ -390,7 +390,99 @@ body {
   font-size: 48px;
   line-height: 59px;
   color: #204B89;
-  margin-top: -82%;
+}
+.page__prices .donate-container .donate-block__vip .select {
+  position: relative;
+  display: block;
+  margin-left: 10%;
+  min-width: 220px;
+  width: 80%;
+  max-width: 400px;
+  margin-bottom: 100%;
+  height: 7%;
+  background: #12161C;
+  border-radius: 10px;
+}
+.page__prices .donate-container .donate-block__vip .select .select__head {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  width: 100%;
+  max-width: 100%;
+  border-radius: 10px;
+  padding: 14px 15px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+  color: #fff;
+  cursor: pointer;
+}
+.page__prices .donate-container .donate-block__vip .select .select__head::after {
+  width: 20px;
+  height: 12px;
+  background: url("/img/arrow-icon.svg") no-repeat center/cover;
+  position: absolute;
+  right: 10px;
+  bottom: 50%;
+  -webkit-transform: translateY(50%);
+          transform: translateY(50%);
+  content: "";
+  display: block;
+  -webkit-transition: 0.2s ease-in;
+  transition: 0.2s ease-in;
+}
+.page__prices .donate-container .donate-block__vip .select .select__head.open::after {
+  -webkit-transform: translateY(50%) rotate(180deg);
+          transform: translateY(50%) rotate(180deg);
+}
+.page__prices .donate-container .donate-block__vip .select .select__list {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  background: #12161C;
+  -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  margin-top: 5px;
+  max-height: 205px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  z-index: 100;
+  margin: 0;
+  padding: 0;
+  font-size: 14px;
+  color: #fff;
+  scrollbar-color: dark;
+  scrollbar-width: thin;
+  -ms-scroll-chaining: none;
+      overscroll-behavior: contain;
+}
+.page__prices .donate-container .donate-block__vip .select .select__list::-webkit-scrollbar {
+  width: 7px;
+  background-color: #F8F9FA;
+  padding: 5px;
+}
+.page__prices .donate-container .donate-block__vip .select .select__list::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #D9D9D9;
+}
+.page__prices .donate-container .donate-block__vip .select .select__list .select__item {
+  position: relative;
+  border-top: 1px solid rgba(224, 229, 231, 0.5);
+  padding: 10px 15px;
+  cursor: pointer;
+  list-style-type: none;
+}
+.page__prices .donate-container .donate-block__vip .select .select__list .select__item:hover {
+  background-color: rgba(224, 229, 231, 0.5);
 }
 .page__prices .donate-container .donate-block__admin {
   display: -webkit-box;
@@ -438,5 +530,97 @@ body {
   font-size: 48px;
   line-height: 59px;
   color: #bb4408;
-  margin-top: -82%;
+}
+.page__prices .donate-container .donate-block__admin .select {
+  position: relative;
+  display: block;
+  margin-left: 10%;
+  min-width: 220px;
+  width: 80%;
+  max-width: 400px;
+  margin-bottom: 100%;
+  height: 7%;
+  background: #12161C;
+  border-radius: 10px;
+}
+.page__prices .donate-container .donate-block__admin .select .select__head {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  width: 100%;
+  max-width: 100%;
+  border-radius: 10px;
+  padding: 14px 15px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+  color: #fff;
+  cursor: pointer;
+}
+.page__prices .donate-container .donate-block__admin .select .select__head::after {
+  width: 20px;
+  height: 12px;
+  background: url("/img/arrow-icon.svg") no-repeat center/cover;
+  position: absolute;
+  right: 10px;
+  bottom: 50%;
+  -webkit-transform: translateY(50%);
+          transform: translateY(50%);
+  content: "";
+  display: block;
+  -webkit-transition: 0.2s ease-in;
+  transition: 0.2s ease-in;
+}
+.page__prices .donate-container .donate-block__admin .select .select__head.open::after {
+  -webkit-transform: translateY(50%) rotate(180deg);
+          transform: translateY(50%) rotate(180deg);
+}
+.page__prices .donate-container .donate-block__admin .select .select__list {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  background: #12161C;
+  -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  margin-top: 5px;
+  max-height: 205px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  z-index: 100;
+  margin: 0;
+  padding: 0;
+  font-size: 14px;
+  color: #fff;
+  scrollbar-color: dark;
+  scrollbar-width: thin;
+  -ms-scroll-chaining: none;
+      overscroll-behavior: contain;
+}
+.page__prices .donate-container .donate-block__admin .select .select__list::-webkit-scrollbar {
+  width: 7px;
+  background-color: #F8F9FA;
+  padding: 5px;
+}
+.page__prices .donate-container .donate-block__admin .select .select__list::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #D9D9D9;
+}
+.page__prices .donate-container .donate-block__admin .select .select__list .select__item {
+  position: relative;
+  border-top: 1px solid rgba(224, 229, 231, 0.5);
+  padding: 10px 15px;
+  cursor: pointer;
+  list-style-type: none;
+}
+.page__prices .donate-container .donate-block__admin .select .select__list .select__item:hover {
+  background-color: rgba(224, 229, 231, 0.5);
 }
