--- a/css/style.css
+++ b/css/style.css
@@ -394,9 +394,9 @@ body {
 .page__prices .donate-container .donate-block__vip .select {
   position: relative;
   display: block;
-  margin-left: 10%;
+  margin-left: 5%;
   min-width: 220px;
-  width: 80%;
+  width: 90%;
   max-width: 400px;
   margin-bottom: 100%;
   height: 7%;
@@ -483,6 +483,50 @@ body {
 }
 .page__prices .donate-container .donate-block__vip .select .select__list .select__item:hover {
   background-color: rgba(224, 229, 231, 0.5);
+}
+.page__prices .donate-container .donate-block__vip .privilege-vip {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 100%;
+  height: 5%;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+  color: #8B929A;
+  margin-top: -100%;
+  margin-left: 5.3%;
+}
+.page__prices .donate-container .donate-block__vip .privilege-vip__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: -98%;
+  margin-right: 20%;
+  height: 40%;
+}
+.page__prices .donate-container .donate-block__vip .privilege-vip__list_item {
+  list-style-image: url("/img/plus-list.svg");
+  list-style-position: outside;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 22px;
+  color: #FFFFFF;
 }
 .page__prices .donate-container .donate-block__admin {
   display: -webkit-box;
@@ -623,4 +667,48 @@ body {
 }
 .page__prices .donate-container .donate-block__admin .select .select__list .select__item:hover {
   background-color: rgba(224, 229, 231, 0.5);
+}
+.page__prices .donate-container .donate-block__admin .privilege-admin {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 100%;
+  height: 5%;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+  color: #8B929A;
+  margin-top: -100%;
+  margin-left: 5.3%;
+}
+.page__prices .donate-container .donate-block__admin .privilege-admin__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: -98%;
+  margin-right: 12%;
+  height: 40%;
+}
+.page__prices .donate-container .donate-block__admin .privilege-admin__list_item {
+  list-style-image: url("/img/plus-list.svg");
+  list-style-position: outside;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 22px;
+  color: #FFFFFF;
 }
