--- a/css/style.scss
+++ b/css/style.scss
@@ -263,9 +263,9 @@ body {
             .select {
                 position: relative;
                 display: block;
-                margin-left: 10%;
+                margin-left: 5%;
                 min-width: 220px;
-                width: 80%;
+                width: 90%;
                 max-width: 400px;
                 margin-bottom: 100%;
                 height: 7%;
@@ -343,6 +343,38 @@ body {
                             background-color: rgba(224, 229, 231, 0.5);
                         }
                     }
+                }
+            }
+            .privilege-vip {
+                display: flex;
+                align-items: center;
+                flex-wrap: wrap;
+                width: 100%;
+                height: 5%;
+                font-style: normal;
+                font-weight: 500;
+                font-size: 18px;
+                line-height: 22px;
+                color: #8B929A;
+                margin-top: -100%;
+                margin-left: 5.3%;
+            }
+            .privilege-vip__list {
+                display: flex;
+                align-items: center;
+                flex-wrap: wrap;
+                justify-content: center;
+                margin-top: -98%;
+                margin-right: 20%;
+                height: 40%;
+                &_item {
+                    list-style-image: url("/img/plus-list.svg");
+                    list-style-position: outside;
+                    font-style: normal;
+                    font-weight: 600;
+                    font-size: 18px;
+                    line-height: 22px;
+                    color: #FFFFFF;
                 }
             }
         }
@@ -460,6 +492,38 @@ body {
                             background-color: rgba(224, 229, 231, 0.5);
                         }
                     }
+                }
+            }
+            .privilege-admin {
+                display: flex;
+                align-items: center;
+                flex-wrap: wrap;
+                width: 100%;
+                height: 5%;
+                font-style: normal;
+                font-weight: 500;
+                font-size: 18px;
+                line-height: 22px;
+                color: #8B929A;
+                margin-top: -100%;
+                margin-left: 5.3%;
+            }
+            .privilege-admin__list {
+                display: flex;
+                align-items: center;
+                flex-wrap: wrap;
+                justify-content: center;
+                margin-top: -98%;
+                margin-right: 12%;
+                height: 40%;
+                &_item {
+                    list-style-image: url("/img/plus-list.svg");
+                    list-style-position: outside;
+                    font-style: normal;
+                    font-weight: 600;
+                    font-size: 18px;
+                    line-height: 22px;
+                    color: #FFFFFF;
                 }
             }
         }
