--- a/css/style.css
+++ b/css/style.css
@@ -874,3 +874,25 @@ body {
   -webkit-box-shadow: 0px 0px 50px #D55707;
           box-shadow: 0px 0px 50px #D55707;
 }
+
+.page__contacts .contacts__title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-top: 5%;
+  margin-left: -0.8%;
+  width: 86%;
+  height: auto;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 288px;
+  line-height: 351px;
+  letter-spacing: 0.007em;
+  color: #09111B;
+  text-shadow: #8B929A 0 0 0;
+}
