--- a/css/style.css
+++ b/css/style.css
@@ -896,3 +896,119 @@ body {
   color: #09111B;
   text-shadow: #8B929A 0 0 0;
 }
+.page__contacts .contacts-block__title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: #fff;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 24px;
+  line-height: 29px;
+  letter-spacing: 0.007em;
+  margin-top: 5%;
+}
+.page__contacts .contacts-block__buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 5%;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 22px;
+  letter-spacing: 0.007em;
+}
+.page__contacts .contacts-block__buttons .btn__item-link_telegram {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: #fff;
+  background: #498EF2;
+  border-radius: 5px;
+  width: 18.6%;
+  height: 70px;
+  margin-left: 1%;
+}
+.page__contacts .contacts-block__buttons .btn__item-link_telegram:hover {
+  -webkit-box-shadow: 0px 0px 50px #498EF2;
+          box-shadow: 0px 0px 50px #498EF2;
+}
+.page__contacts .contacts-block__buttons .btn__item-link_telegram img {
+  margin-right: 5%;
+}
+.page__contacts .contacts-block__buttons .btn__item-link_discord {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: #fff;
+  background: #5D5FEF;
+  border-radius: 5px;
+  width: 18.6%;
+  height: 70px;
+  margin-left: 2%;
+}
+.page__contacts .contacts-block__buttons .btn__item-link_discord:hover {
+  -webkit-box-shadow: 0px 0px 50px #5D5FEF;
+          box-shadow: 0px 0px 50px #5D5FEF;
+}
+.page__contacts .contacts-block__buttons .btn__item-link_discord img {
+  margin-right: 5%;
+}
+
+.page__footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 12%;
+  height: 2%;
+  background: #172536;
+}
+.page__footer_title {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
+  letter-spacing: 0.007em;
+  color: #FFFFFF;
+}
