--- a/css/style.scss
+++ b/css/style.scss
@@ -664,7 +664,87 @@ body {
         color: #09111B;
         text-shadow: $greyColor 0 0 0;
     }
+    .contacts-block__title {
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        justify-content: center;
+        color: #fff;
+        font-style: normal;
+        font-weight: 800;
+        font-size: 24px;
+        line-height: 29px;
+        letter-spacing: 0.007em;
+        margin-top: 5%;
+    }
+    .contacts-block__buttons {
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin-top: 5%;
+        font-style: normal;
+        font-weight: 800;
+        font-size: 18px;
+        line-height: 22px;
+        letter-spacing: 0.007em;
+        .btn__item-link_telegram {
+            display: flex;
+            align-items: center;
+            flex-wrap: wrap;
+            justify-content: center;
+            color: #fff;
+            background: #498EF2;
+            border-radius: 5px;
+            width: 18.6%;
+            height: 70px;
+            margin-left: 1%;
+            &:hover {
+                box-shadow: 0px 0px 50px #498EF2;
+            }
+            & img {
+                margin-right: 5%;
+            }
+        }
+        .btn__item-link_discord {
+            display: flex;
+            align-items: center;
+            flex-wrap: wrap;
+            justify-content: center;
+            color: #fff;
+            background: #5D5FEF;
+            border-radius: 5px;
+            width: 18.6%;
+            height: 70px;
+            margin-left: 2%;
+            &:hover {
+                box-shadow: 0px 0px 50px #5D5FEF;
+            }
+            & img {
+                margin-right: 5%;
+            }
+        }
+    }
+
 }
+.page__footer {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 12%;
+    height: 2%;
+    background: #172536;
+    &_title {
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 17px;
+        letter-spacing: 0.007em;
+        color: #FFFFFF;
+    }
+}
+
 
 
 
