--- a/css/style.scss
+++ b/css/style.scss
@@ -168,8 +168,10 @@ body {
         font-size: 288px;
         line-height: 351px;
         letter-spacing: 0.007em;
-        color: #09111B;
-        text-shadow: $greyColor 0 0 0;
+        // color: #09111B;
+        // text-shadow: $greyColor 0 0 0;
+        -webkit-text-stroke: 0.5px $greyColor;
+        -webkit-text-fill-color: #09111B;
     }
     .rules__container {
         display: flex;
@@ -225,8 +227,10 @@ body {
         font-size: 288px;
         line-height: 351px;
         letter-spacing: 0.007em;
-        color: #09111B;
-        text-shadow: $greyColor 0 0 0;
+        // color: #09111B;
+        // text-shadow: $greyColor 0 0 0;
+        -webkit-text-stroke: 0.5px $greyColor;
+        -webkit-text-fill-color: #09111B;
     }
     .donate-container {
         display: flex;
@@ -342,7 +346,7 @@ body {
                     background-color: #D9D9D9;
                 }
                 .select__list {
-                    .select__item {
+                    .select__item_vip {
                         position: relative;
                         border-top: 1px solid rgba(224, 229, 231, 0.5);
                         padding: 10px 15px;
@@ -407,7 +411,7 @@ body {
                 line-height: 17px;
                 margin-bottom: 4%;
             }
-            .privilege__price {
+            .privilege__price_vip {
                 display: flex;
                 flex-wrap: wrap;
                 align-items: center;
@@ -551,7 +555,7 @@ body {
                     background-color: #D9D9D9;
                 }
                 .select__list {
-                    .select__item {
+                    .select__item_admin {
                         position: relative;
                         border-top: 1px solid rgba(224, 229, 231, 0.5);
                         padding: 10px 15px;
@@ -616,7 +620,7 @@ body {
                 line-height: 17px;
                 margin-bottom: 4%;
             }
-            .privilege__price {
+            .privilege__price_admin {
                 display: flex;
                 flex-wrap: wrap;
                 align-items: center;
@@ -669,8 +673,10 @@ body {
         font-size: 288px;
         line-height: 351px;
         letter-spacing: 0.007em;
-        color: #09111B;
-        text-shadow: $greyColor 0 0 0;
+        -webkit-text-stroke: 0.5px $greyColor;
+        -webkit-text-fill-color: #09111B;
+        // color: #09111B;
+        // text-shadow: $greyColor 0 0 0;
     }
     .contacts-block__title {
         display: flex;
