--- a/css/style.scss
+++ b/css/style.scss
@@ -13,7 +13,7 @@
 
 //<variables>==================================================
 $ff: Montserrat;
-$orangeColor: #BF9140;
+$orangeColor: #ffa200;
 $greyColor: #8B929A;
 $blueGradientColor: linear-gradient(90.38deg, #245293 0%, #4485E4 100%);
 $orangeGradientColor: linear-gradient(90.38deg, #D55707 0%, #F59902 100%);
