--- a/css/style.scss
+++ b/css/style.scss
@@ -758,7 +758,21 @@ body {
         color: #FFFFFF;
     }
 }
-
+.popup {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    top: 0;
+    left: 0;
+    &__body {
+        min-height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 30px 10px;
+    }
+}
 
 
 
