--- a/css/style.css
+++ b/css/style.css
@@ -1041,6 +1041,29 @@ body {
   background: rgba(0, 0, 0, 0.8);
   top: 0;
   left: 0;
+  opacity: 0;
+  visibility: hidden;
+  z-index: 100;
+  overflow-y: auto;
+  overflow-x: hidden;
+  -webkit-transition: all 0.8s ease 0s;
+  transition: all 0.8s ease 0s;
+}
+.popup:target {
+  opacity: 1;
+  visibility: visible;
+}
+.popup:target .popup__content {
+  -webkit-transform: translate(0px, 0px);
+          transform: translate(0px, 0px);
+  opacity: 1;
+}
+.popup .popup__area {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
 }
 .popup__body {
   min-height: 100%;
@@ -1054,4 +1077,25 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   padding: 30px 10px;
+}
+.popup .popup__content {
+  background-color: #ffffff;
+  color: #000;
+  max-width: 800px;
+  padding: 30px;
+  position: relative;
+  -webkit-transition: all 0.8s ease 0s;
+  transition: all 0.8s ease 0s;
+  opacity: 0;
+  -webkit-transform: translate(0px, -100%);
+          transform: translate(0px, -100%);
+}
+.popup .popup__close {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+.popup .popup__title {
+  font-size: 40px;
+  margin: 0px 0px 1em 0px;
 }
