--- a/css/style.scss
+++ b/css/style.scss
@@ -765,12 +765,55 @@ body {
     background: rgba(0, 0, 0, 0.8);
     top: 0;
     left: 0;
+    opacity: 0;
+    visibility: hidden;
+    z-index: 100;
+    overflow-y: auto;
+    overflow-x: hidden;
+    transition: all 0.8s ease 0s;
+    &:target {
+        opacity: 1;
+        visibility: visible;
+        .popup__content {
+            transform: translate(0px, 0px);
+            opacity: 1;
+        }
+    }
+    .popup__area {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+    }
     &__body {
         min-height: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
         padding: 30px 10px;
+    }
+    .popup__content {
+        background-color: #ffffff;
+        color: #000;
+        max-width: 800px;
+        padding: 30px;
+        position: relative;
+        transition: all 0.8s ease 0s;
+        opacity: 0;
+        transform: translate(0px, -100%);
+    }
+    .popup__close {
+        position: absolute;
+        right: 10px;
+        top: 10px;
+    }
+    .popup__title {
+        font-size: 40px;
+        margin: 0px 0px 1em 0px;
+    }
+    .popup__text {
+
     }
 }
 
