--- a/css/style.scss
+++ b/css/style.scss
@@ -26,7 +26,8 @@ $orangeGradientColor: linear-gradient(90.38deg, #D55707 0%, #F59902 100%);
 body {
     overflow-x: hidden;
     z-index: -2;
-    background-image: url("/img/bg.png");
+    // background-image: url("/img/bg.png");
+    background: #09111B;;
     height: 4500px;
 
 }
