--- a/css/style.scss
+++ b/css/style.scss
@@ -31,7 +31,7 @@ html{
 body {
     overflow-x: hidden;
     z-index: -2;
-    background-image: url("/img/bg.png");
+    background-image: url("./img/bg.png");
     // background: #09111B;
     height: 4500px;
 
@@ -843,7 +843,7 @@ body {
             list-style-image: url("/img/plus-icon_blue.svg");
             margin-left: 5%;
             margin-top: 3%;
-            list-style-position: inside;
+            list-style-position: outside;
             font-style: normal;
             font-weight: 600;
             font-size: 18px;
@@ -881,6 +881,56 @@ body {
             font-size: 18px;
             line-height: 22px;
             color: #fff;
+        }
+    }
+    .popup__buttons {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        height: 200px;
+        .popup__buy_btnT {
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            justify-content: center;
+            height: 30%;
+            width: 10%;
+            background: #498EF2;
+            border-radius: 20px;
+            margin-right: 2%;
+            margin-left: 4%;
+            &:hover {
+                box-shadow: 0px 0px 50px #498EF2;
+            }
+        }
+        .popup__buy_btnS {
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            justify-content: center;
+            height: 30%;
+            width: 10%;
+            background: #0057FF;
+            border-radius: 20px;
+            margin-left: 2%;
+            &:hover {
+                box-shadow: 0px 0px 50px #0057FF;
+            }
+        }
+    }
+    .popup__admin_rule {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        margin-top: 2%;
+        .popup__criteria_title {
+            font-weight: bold;
+        }
+        .popup__criteria_text {
+            margin-top: 2%;
+            color: #CE4A08;
         }
     }
 }
