--- a/css/style.scss
+++ b/css/style.scss
@@ -31,7 +31,7 @@ html{
 body {
     overflow-x: hidden;
     z-index: -2;
-    background-image: url("./img/bg.png");
+    background-image: url("../img/bg.png");
     // background: #09111B;
     height: 4500px;
 
