--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ html {
 body {
   overflow-x: hidden;
   z-index: -2;
-  background-image: url("Immigrations/img/bg.png");
+  background: #09111B;
   height: 4500px;
 }
 
