--- a/css/style.scss
+++ b/css/style.scss
@@ -307,7 +307,7 @@ body {
                     &::after {
                         width: 20px;
                         height: 12px;
-                        background: url("/img/arrow-icon.svg") no-repeat center / cover;
+                        background: url("../img/arrow-icon.svg") no-repeat center / cover;
                         position: absolute;
                         right: 10px;
                         bottom: 50%;
