updating pupup blocks

--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,11 @@ body {
   height: 4500px;
 }
 
+.wrapper {
+  overflow: hidden;
+  min-height: 100%;
+}
+
 .header__menu .header__logo {
   display: -webkit-box;
   display: -ms-flexbox;
