--- a/css/style.scss
+++ b/css/style.scss
@@ -36,6 +36,10 @@ body {
     height: 4500px;
 
 }
+.wrapper {
+	overflow: hidden;
+	min-height: 100%;
+}
 .header__menu { 
     .header__logo {
         display: flex;
